@@ -1,3 +1,4 @@
+2355 [OneClick] added option to disable intermediate MKV files
 2354 [MainForm] improved File\Open and drag & drop handling
 2353 [MKV Muxer] fixed raw LC-AAC files detected as HW-AAC
                  fixed wrong default duration for interlaced AVC in some cases
